--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -11,8 +11,8 @@
 {% endblock %}
 
 {% block header_content %}
-  <section class="text-left text-white flex flex-col items-start w-full max-w-6xl mx-auto pl-8 pr-8">
-    <h1 class="font-hero font-thin mt-10 mb-16">{{ self.page_title() }}</h1>
+  <section class="text-left text-white flex flex-col items-start xl:w-full max-w-6xl mx-auto pl-8 pr-8">
+    <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-16">{{ self.page_title() }}</h1>
   </section>
 {% endblock %}
 
@@ -23,8 +23,8 @@
       {{ _('How to get support for Thunderbird.') }}
     </p>
 
-    <section class="flex w-full max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
+    <section class="flex xl:w-full flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
+      <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           {{ _('<a href="%(support)s" class="header-link" target="_blank">Mozilla Support Website</a>')|format(support=url('support')) }}
         </h4>
@@ -33,7 +33,7 @@
         </p>
       </article>
 
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg ml-16 mr-16">
+      <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg lg:ml-16 lg:mr-16">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           {{ _('<a href="https://support.mozilla.org/questions/new/thunderbird" class="header-link" target="_blank">Ask a Question</a>') }}
         </h4>
@@ -42,7 +42,7 @@
         </p>
       </article>
 
-      <article class="flex flex-col p-4 flex-1 max-w-sm bg-white rounded shadow-lg">
+      <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
         <h4 class="mt-0 mb-4 uppercase text-blue font-md">
           {{ _('<a href="irc://irc.mozilla.org/thunderbird" class="header-link" target="_blank">Live Chat on IRC</a>') }}
         </h4>
@@ -54,9 +54,9 @@
   </section>
 
   <section class="pt-20 pb-10 w-full bg-calendar">
-    <section class="flex flex-wrap max-w-6xl mx-auto">
-      <aside class="flex flex-col w-1/2">
-        <article class="flex flex-col w-full mb-6 pr-8">
+    <section class="flex flex-col lg:flex-row max-w-6xl mx-auto">
+      <aside class="flex flex-col lg:w-1/2 pr-8 pl-8">
+        <article class="flex flex-col w-full mb-6 lg:pr-8">
           <h4 class="subheader-section">{{ _('Security') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
             {{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/" target="_blank">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird" target="_blank">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report.') }}
@@ -67,15 +67,15 @@
         </article>
       </aside>
 
-      <aside class="flex flex-col w-1/2">
-        <article class="flex flex-col w-full mb-6 pl-8">
+      <aside class="flex flex-col lg:w-1/2 pr-8 pl-8">
+        <article class="flex flex-col w-full mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('Partnerships') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
             {{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird? Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}
           </p>
         </article>
 
-        <article class="flex flex-col w-full pl-8">
+        <article class="flex flex-col w-full lg:pl-8">
           <h4 class="subheader-section">{{ _('Press Inquiries') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
             {{ _('Are you a member of the press who would like to ask us a question about Thunderbird? You can reach our team at <a href="mailto:press@thunderbird.net">press@thunderbird.net</a>.') }}
