--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -22,9 +22,9 @@
 {% endblock %}
 
 {% block header_content %}
-  <section class="text-center text-white flex flex-col items-center w-full max-w-6xl mx-auto pl-8 pr-8">
-    <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
-    <p class="font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
+  <section class="text-center text-white flex flex-col items-center xl:w-full max-w-6xl mx-auto pl-8 pr-8">
+    <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
+    <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
       {{ self.page_desc() }}
     </p>
   </section>
@@ -58,7 +58,7 @@
     </aside>
   </section>
 
-  <section class="pt-10 pb-10 w-full bg-calendar">
+  <section class="pt-10 pb-20 w-full bg-calendar">
     <section class="flex justify-between items-center w-full max-w-6xl mx-auto mb-10">
       <ul class="list-none p-0 flex flex-wrap justify-center flex-1 m-0 bg-grey-light rounded mr-8 ml-8">
         {% set letter = namespace(first='') %}
