--- a/website/index.html
+++ b/website/index.html
@@ -67,47 +67,50 @@
       {{ _('Keep yourself up to date with recent announcements and releases by following the official Thunderbird Blog!') }}
     </p>
 
-    <section class="flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
-      <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
-        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          What’s New in Thunderbird 68
-        </h4>
-        <p class="mt-0 mb-6 flex-1">
-          Our newest release, Thunderbird version 68 is now available! Let’s take a look at the features that are most noteworthy in the newest version.
-        </p>
-        <footer
-          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-          <span>Aug 28, 2019</span>
-          <span>Comments 0</span>
-        </footer>
-      </article>
+    {% if LANG.startswith('en-') %}
+      <section class="flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
+        <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
+          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
+            {{ get_blog_data(0)['title'] }}
+          </h4>
+          <p class="mt-0 mb-6 flex-1">
+            {{ get_blog_data(0)['summary'] }}
+          </p>
+          <footer
+            class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+            <span>{{ get_blog_data(0)['date'] }}</span>
+            <span>COMMENTS {{ get_blog_data(0)['comments'] }}</span>
+          </footer>
+        </article>
 
-      <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg lg:ml-16 lg:mr-16">
-        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          All Thunderbird bugs have been fixed!
-        </h4>
-        <p class="mt-0 mb-6 flex-1">
-          April Fools! We still have open bugs, but we'd like your help to close them!
-        </p>
-        <footer class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-          <span>Apr 1, 2019</span>
-          <span>Comments 0</span>
-        </footer>
-      </article>
+        <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg lg:ml-16 lg:mr-16">
+          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
+            {{ get_blog_data(1)['title'] }}
+          </h4>
+          <p class="mt-0 mb-6 flex-1">
+            {{ get_blog_data(1)['summary'] }}
+          </p>
+          <footer class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+            <span>{{ get_blog_data(1)['date'] }}</span>
+            <span>COMMENTS {{ get_blog_data(1)['comments'] }}</span>
+          </footer>
+        </article>
 
-      <article class="flex flex-col p-4 flex-1 lg:max-w-sm bg-white rounded shadow-lg">
-        <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-          FOSDEM 2019 and DeltaChat
-        </h4>
-        <p class="mt-0 mb-6 flex-1">
-          During the last month we attended two events: FOSDEM, Europe's premier free software event, and a meetup with the folks behind DeltaChat.
-        </p>
-        <footer
-          class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-          <span>Mar 7, 2019</span>
-        </footer>
-      </article>
-    </section>
+        <article class="flex flex-col p-4 flex-1 lg:max-w-sm bg-white rounded shadow-lg">
+          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
+            {{ get_blog_data(2)['title'] }}
+          </h4>
+          <p class="mt-0 mb-6 flex-1">
+            {{ get_blog_data(2)['summary'] }}
+          </p>
+          <footer
+            class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+            <span>{{ get_blog_data(2)['date'] }}</span>
+            <span>COMMENTS {{ get_blog_data(2)['comments'] }}</span>
+          </footer>
+        </article>
+      </section>
+    {% endif %}
 
     <a href="{{ url('blog') }}" class="btn-body mb-10" target="_blank">{{_('Read the Blog')}}
       <span>{{ svg('chevron-right') }}</span>
