Fix Get Involved content bleeding

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -252,7 +252,7 @@
     </aside>
   </section>
 
-  <section class="pt-10 lg:pt-20 pb-10 w-full bg-calendar pr-8 pl-8">
+  <section class="pt-10 lg:pt-20 pb-10 bg-calendar pr-8 pl-8">
     <section id="communication" class="flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto">
       <aside class="flex flex-col w-full mb-10">
         <h3 class="header-section">
