Add All Releases link

--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -37,6 +37,9 @@
         <li class="ml-2 mr-2">
           <a href="{{ thunderbird_url('releasenotes', channel) }}" class="btn-link">{{ _('Release notes') }}</a>
         </li>
+        <li class="ml-2 mr-2">
+          <a href="{{ url('thunderbird.releases.index') }}" class="btn-link">{{ _('All Releases') }}</a>
+        </li>
       </ul>
     </nav>
   {% endif %}
