--- a/website/index.html
+++ b/website/index.html
@@ -61,60 +61,38 @@
     </aside>
   </section>
 
-  <section class="pt-10 pb-10 lg:pt-20 lg:pb-20 flex flex-col items-center bg-body">
-    <h3 class="header-section pr-4 pl-4">{{ _('Stay in the loop')}}</h3>
-    <p class="font-lg tracking-wider leading-loose mb-16 mt-0 max-w-xl text-center pr-4 pl-4">
-      {{ _('Keep yourself up to date with recent announcements and releases by following the official Thunderbird Blog!') }}
-    </p>
+  <section class="bg-body">
+    <section class="pt-10 pb-10 lg:pt-20 lg:pb-20 flex flex-col items-center">
+      <h3 class="header-section pr-4 pl-4">{{ _('Stay in the loop')}}</h3>
+      <p class="font-lg tracking-wider leading-loose mb-16 mt-0 max-w-xl text-center pr-4 pl-4">
+        {{ _('Keep yourself up to date with recent announcements and releases by following the official Thunderbird Blog!') }}
+      </p>
 
-    {% if LANG.startswith('en-') %}
-      <section class="flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
-        <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg">
-          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-            {{ get_blog_data(0)['title'] }}
-          </h4>
-          <p class="mt-0 mb-6 flex-1">
-            {{ get_blog_data(0)['summary'] }}
-          </p>
-          <footer
-            class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-            <span>{{ get_blog_data(0)['date'] }}</span>
-            <span>COMMENTS {{ get_blog_data(0)['comments'] }}</span>
-          </footer>
-        </article>
+      {% if LANG.startswith('en-') %}
+        <section class="flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8 mb-12 leading-relaxed">
 
-        <article class="flex flex-col p-4 flex-1 lg:max-w-sm mb-10 lg:mb-0 bg-white rounded shadow-lg lg:ml-16 lg:mr-16">
-          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-            {{ get_blog_data(1)['title'] }}
-          </h4>
-          <p class="mt-0 mb-6 flex-1">
-            {{ get_blog_data(1)['summary'] }}
-          </p>
-          <footer class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-            <span>{{ get_blog_data(1)['date'] }}</span>
-            <span>COMMENTS {{ get_blog_data(1)['comments'] }}</span>
-          </footer>
-        </article>
+          {% for x in range(3): %}
+            <article class="flex flex-col p-4 flex-1 lg:max-w-sm bg-white rounded shadow-lg{% if x != 2 %} mb-10 lg:mb-0{% endif %}{% if x == 1 %} lg:ml-16 lg:mr-16{% endif %}">
+              <a class="blog-link" href="{{ get_blog_data(x)['link'] }}" target="_blank" title="Continue Reading {{ get_blog_data(x)['title'] }}">
+                {{ get_blog_data(x)['title'] }}
+              </a>
+              <p class="blog-body">
+                {{ get_blog_data(x)['summary'] }}
+              </p>
+              <footer class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
+                <span>{{ get_blog_data(x)['date'] }}</span>
+                <span>COMMENTS {{ get_blog_data(x)['comments'] }}</span>
+              </footer>
+            </article>
+          {% endfor %}
 
-        <article class="flex flex-col p-4 flex-1 lg:max-w-sm bg-white rounded shadow-lg">
-          <h4 class="mt-0 mb-4 uppercase text-blue font-md">
-            {{ get_blog_data(2)['title'] }}
-          </h4>
-          <p class="mt-0 mb-6 flex-1">
-            {{ get_blog_data(2)['summary'] }}
-          </p>
-          <footer
-            class="flex justify-between items-center pt-4 border-grey-light border-solid border-0 border-t uppercase text-blue-dark font-bold tracking-tight">
-            <span>{{ get_blog_data(2)['date'] }}</span>
-            <span>COMMENTS {{ get_blog_data(2)['comments'] }}</span>
-          </footer>
-        </article>
-      </section>
-    {% endif %}
+        </section>
+      {% endif %}
 
-    <a href="{{ url('blog') }}" class="btn-body mb-10" target="_blank">{{_('Read the Blog')}}
-      <span>{{ svg('chevron-right') }}</span>
-    </a>
+      <a href="{{ url('blog') }}" class="btn-body mb-10" target="_blank">{{_('Read the Blog')}}
+        <span>{{ svg('chevron-right') }}</span>
+      </a>
+    </section>
   </section>
 
   {% include '_includes/donate-mailing-list.html' %}
