Remove target="_blank" from templates, and add Javascript to compensate.

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -29,12 +29,12 @@
         {{ _('Organize your schedule and life&rsquo;s important events in a calendar that&rsquo;s fully integrated with your Thunderbird or Seamonkey email. Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
       </p>
       <aside class="ml-0 mr-0 self-start text-left text-blue font-semibold">
-        <a href="https://addons.thunderbird.net/addon/lightning/" class="btn-join self-start" target="_blank">
+        <a href="https://addons.thunderbird.net/addon/lightning/" class="btn-join self-start">
           {{_('Free Download')}}
         </a>
         <p class="font-sm mt-0 text-blue font-semibold self-start">
           <a href="https://addons.thunderbird.net/addon/lightning/versions/" class="small-link text-blue"
-            target="_blank">{{ _('Other Systems &amp; Versions') }}</a>
+           >{{ _('Other Systems &amp; Versions') }}</a>
         </p>
       </aside>
     </aside>
@@ -49,7 +49,7 @@
 
       <aside class="flex flex-col w-1/3">
         <a href="https://developer.mozilla.org/en/Calendar/Calendar_Versions"
-          class="flex flex-col btn-block-white m-2" target="_blank">
+          class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('information') }}</span>
             <aside class="flex flex-col font-lg">
@@ -64,7 +64,7 @@
 
       <aside class="flex flex-col w-1/3">
         <a href="https://support.mozilla.org/products/thunderbird/calendar"
-          class="flex flex-col btn-block-white m-2" target="_blank">
+          class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('help') }}</span>
             <aside class="flex flex-col font-lg">
@@ -93,7 +93,7 @@
 
       <aside class="flex flex-col w-1/3">
         <a href="https://developer.mozilla.org/en/Calendar/"
-          class="flex flex-col btn-block-white m-2" target="_blank">
+          class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('developer') }}</span>
             <aside class="flex flex-col font-lg">
@@ -108,7 +108,7 @@
 
       <aside class="flex flex-col w-1/3">
         <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Calendar"
-          class="flex flex-col btn-block-white m-2" target="_blank">
+          class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('warning') }}</span>
             <aside class="flex flex-col font-lg">
@@ -123,7 +123,7 @@
 
       <aside class="flex flex-col w-1/3">
         <a href="https://codetribute.mozilla.org/projects/calendar"
-          class="flex flex-col btn-block-white m-2" target="_blank">
+          class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('report') }}</span>
             <aside class="flex flex-col font-lg">
