--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 {% extends "_includes/base-resp.html" %}
 
 {% block page_title_prefix %}{{_('Thunderbird')}} — {% endblock %}
-{% block page_title %}{{ _('Software made to make email easier') }}{% endblock %}
+{% block page_title %}{{ _('Make Email Easier!') }}{% endblock %}
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 
 {% block header_content %}
