--- a/website/thunderbird/68.0/whatsnew/index.html
+++ b/website/thunderbird/68.0/whatsnew/index.html
@@ -10,7 +10,7 @@
   <section class="text-left text-white flex flex-col items-start lg:w-full max-w-6xl mx-auto pl-8 pr-8">
     <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
     <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-16 mt-0 p-links">
-      {{ _('This article describes some of the major changes visible to users in Thunderbird version 68.0. Full details of all the changes can be found in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/thunderbird/68.0/releasenotes/') }}
+      {{ _('This article describes some of the major changes visible to users in Thunderbird version 68.0. Full details of all the changes can be found in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/en-US/thunderbird/68.0/releasenotes/') }}
       </p>
   </section>
 {% endblock %}
@@ -70,7 +70,7 @@
         {{ _('There are many other smaller changes that make Thunderbird 68 feel polished and powerful including: a new App Menu UI, an updated To/CC/BCC selector in compose, improved attachment management, full color support across the app, filters can now be set to run periodically, and feed articles now show external attachments as links.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('There are many other updates in this release, you can see a list of all of them in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/thunderbird/68.0/releasenotes/') }}
+        {{ _('There are many other updates in this release, you can see a list of all of them in the <a href="%(release)s">Thunderbird 68 release notes</a>.')|format(release='https://www.thunderbird.net/en-US/thunderbird/68.0/releasenotes/') }}
       </p>
     </aside>
   </section>
