--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -228,9 +228,17 @@
             </small>
           </aside>
         </h3>
-        <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
-        </p>
+        <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
+          <li>
+            {{ _('Localization of Thunderbird occurs primarily <a href="https://pontoon.mozilla.org/projects/thunderbird/">on Pontoon</a>, Mozilla’s web-based localization tool.') }}
+          </li>
+          <li>
+            {{ _('You can also contribute translations for this <a href="https://pontoon.mozilla.org/projects/thunderbirdnet/">website on Pontoon</a>.') }}
+          </li>
+          <li>
+           {{ _('In addition, see <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
+          </li>
+        </ul>
       </article>
     </aside>
 
