Change wording of fully customizable paragraph on front page.

--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@
         <span>{{ svg('puzzle') }}</span>{{ _('Fully Customizable')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10 flex-1">
-        {{ _('With Extensions, Themes, and many more features you can change the look and feel of Thunderbird in an instant.') }}
+        {{ _('With Add-ons(Extensions, Themes) and many more features you can change the look and feel of Thunderbird in an instant.') }}
       </p>
       <a href="{{ url('thunderbird.features') }}#customize-email" class="btn-body self-start">{{_('Make it personal')}}
         <span>{{ svg('chevron-right') }}</span>
