Change 'Fully' to 'Highly' Customizable heading on front page.

--- a/website/index.html
+++ b/website/index.html
@@ -50,7 +50,7 @@
 
     <aside class="flex flex-col flex-1 lg:max-w-sm">
       <h3 class="header-section">
-        <span>{{ svg('puzzle') }}</span>{{ _('Fully Customizable')}}
+        <span>{{ svg('puzzle') }}</span>{{ _('Highly Customizable')}}
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-10 flex-1">
         {{ _('With Add-ons(Extensions & Themes) and many more features you can change the look and feel of Thunderbird in an instant.') }}
