--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -55,8 +55,10 @@
         {{ _('Thunderbird is looking for a multi-skilled self-starter to work partly on release engineering, and partly on operating the cloud based web infrastructure around Thunderbird. You will be working in close cooperation with our release engineer, infra engineer and other staff, as well as with community members.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.<br/>
-        As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
+        {{ _('As a release engineer you will be serving the community, empowering them to make their contributions available to millions of people worldwide. Your focus will be on developing and maintaining the systems that are used for continuous integration and for making the final builds of the software available to end users. A large part of this is following and adjusting to improvements made by the Firefox release engineering team, since Thunderbird uses very similar tools and procedures. You will collaborate with <strong>QA</strong>, <strong>security</strong>, <strong>localization</strong>, and engineering to ship beta and release builds.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
         {{ _('The Thunderbird project operates some server side infrastructure, such as the <a href="https://thunderbird.net/">thunderbird.net</a> web site and <a href="https://addons.thunderbird.net/">addons.thunderbird.net</a>. As a web infra engineer you will be involved with infrastructure maintenance and development and of these web sites. The job involves full stack development of these properties, as well as monitoring their cloud based deployments.') }}
@@ -233,7 +235,7 @@
       <h3 class="header-section">
         <span>{{ svg('bookmark') }}</span>
         <aside class="flex flex-col">
-          {{ _('Add-ons Coordinator')}}
+          {{ _('Add-on Support Engineer')}}
           <small class="font-normal font-md tracking-normal normal-case">
             {{ _('Full Time / Remote') }}
           </small>
@@ -268,7 +270,7 @@
           {{ _('Helping to integrate the best parts of popular add-ons directly into core.') }}
         </li>
         <li>
-          {{ _('.Helping the Thunderbird team understand the needs of add-on authors.') }}
+          {{ _('Helping the Thunderbird team understand the needs of add-on authors.') }}
         </li>
       </ul>
     </aside>
