--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -42,7 +42,10 @@
 
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
-      <h3 class="header-section">
+      <h3 class="header-section" id="release-engineer">
+        <a class="anchor" aria-hidden="true" href="#release-engineer">
+          {{ svg('link') }}
+        </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
           {{ _('Thunderbird Release Engineer / Web Infra Engineer')}}
@@ -92,7 +95,10 @@
 
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
-      <h3 class="header-section">
+      <h3 class="header-section" id="senior-software-engineer">
+        <a class="anchor" aria-hidden="true" href="#senior-software-engineer">
+          {{ svg('link') }}
+        </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
           {{ _('Senior Software Engineers')}}
@@ -162,7 +168,10 @@
 
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
-      <h3 class="header-section">
+      <h3 class="header-section" id="software-engineer">
+        <a class="anchor" aria-hidden="true" href="#software-engineer">
+          {{ svg('link') }}
+        </a>
         <span>{{ svg('developer') }}</span>
         <aside class="flex flex-col">
           {{ _('Software Engineers')}}
@@ -232,7 +241,10 @@
 
   <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
     <aside>
-      <h3 class="header-section">
+      <h3 class="header-section" id="add-on-support">
+        <a class="anchor" aria-hidden="true" href="#add-on-support">
+          {{ svg('link') }}
+        </a>
         <span>{{ svg('bookmark') }}</span>
         <aside class="flex flex-col">
           {{ _('Add-on Support Engineer')}}
@@ -298,6 +310,9 @@
     <section class="flex flex-wrap max-w-6xl mx-auto pl-8 pr-8">
       <aside class="flex flex-col w-full">
         <h3 id="apply" class="header-section">
+          <a class="anchor" aria-hidden="true" href="#apply">
+            {{ svg('link') }}
+          </a>
           <span>{{ svg('check') }}</span>
           <aside class="flex flex-col">
             {{ _('How to Apply')}}
