--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -305,6 +305,73 @@
       <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
     </aside>
   </section>
+  
+  <section class="pt-10 pb-10 flex flex-col max-w-6xl mx-auto justify-between pl-8 pr-8">
+    <aside>
+      <h3 class="header-section" id="enterprise-support">
+        <a class="anchor" aria-hidden="true" href="#enterprise-support">
+          {{ svg('link') }}
+        </a>
+        <span>{{ svg('bookmark') }}</span>
+        <aside class="flex flex-col">
+          {{ _('Enterprise Support and Documentation Engineer')}}
+          <small class="font-normal font-md tracking-normal normal-case">
+            {{ _('Full Time / Remote') }}
+          </small>
+        </aside>
+      </h3>
+      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
+        {{ _('Thunderbird plans to start offering enterprise support contracts. We’re hiring someone to lead this effort. You’d be working with others on the team to make Thunderbird great for enterprise usage, and to resolve issues for customers. In the process, you’ll also help many end users.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
+        {{ _('One part of the job is to create and maintain administrator targeted documentation, such as documentation on how to set up group policies, and keeping the relevant articles up to date. There is also a need for improved end user support articles, as well as more marketing oriented material describing Thunderbird features. As the liaison to our enterprise users you’ll be involved in highlighting their concerns and feedback.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('At Thunderbird, you’ll be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, IRC, and Bugzilla.') }}
+      </p>
+    </aside>
+    <aside>
+      <h4 class="subheader-section">{{ _('You could end up working on:') }}</h4>
+      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
+        <li>
+          {{ _('Working with enterprise customers to track down problems, and the Thunderbird team to get those problems resolved.') }}
+        </li>
+        <li>
+          {{ _('Triaging incoming bug reports.') }}
+        </li>
+        <li>
+          {{ _('Proactively documenting Thunderbird features targeting organizations.') }}
+        </li>
+        <li>
+          {{ _('Improving end user documentation and support articles.') }}
+        </li>
+        <li>
+          {{ _('Creating engaging content for Thunderbird marketing needs, such as how-to articles and videos about new and old features.') }}
+        </li>
+      </ul>
+    </aside>
+    <aside>
+      <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
+      <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
+        <li>
+          {{ _('Great written communication skills. (English required, Germany or French is a plus.)') }}
+        </li>
+        <li>
+          {{ _('Great technical problem solving abilities.') }}
+        </li>
+        <li>
+          {{ _('Relevant system administration experience is a plus.') }}
+        </li>
+        <li>
+          {{ _('Proven technical writing capacity as well as a good eye for visual content.') }}
+        </li>
+      </ul>
+      <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
+    </aside>
+  </section>
 
   <section class="pt-20 pb-20 w-full bg-calendar">
     <section class="flex flex-wrap max-w-6xl mx-auto pl-8 pr-8">
